Fix spacing in topics "no data"

--- a/client/src/app/components/topic/topic.component.scss
+++ b/client/src/app/components/topic/topic.component.scss
@@ -29,6 +29,10 @@
         border-bottom: 1px solid #666;
       }
     }
+
+    > i {
+      padding: 0.5rem;
+    }
   }
 }
 
